--- a/src/main/resources/templates/persons/index.html
+++ b/src/main/resources/templates/persons/index.html
@@ -3,45 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Team</title>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Link para o seu CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Create New Team</h1>
+<script>
+    function cpf(v) {
+        v = v.replace(/\D/g, "")
+        v = v.replace(/(\d{3})(\d)/, "$1.$2")
+        v = v.replace(/(\d{3})(\d)/, "$1.$2")
+        v = v.replace(/(\d{3})(\d{1,2})$/, "$1-$2")
+        return v
+    }
+    function phone(v) {
+        v = v.replace(/\D/g, "");
+        v = v.replace(/^(\d{2})(\d)/g, "($1) $2");
+        v = v.replace(/(\d{5})(\d)/, "$1-$2");
+        return v;
+    }
+    function applyCpfMask(event) {
+        event.target.value = cpf(event.target.value);
+    }
+    function applyPhoneMask(event) {
+        event.target.value = phone(event.target.value);
+    }
+</script>
+<section class="person">
+   <div class="container">
+       <h1>Create New Team</h1>
+       <h1>Home</h1>
+       <a href="/logout">Logout</a>
+       <form th:action="@{/persons}" th:object="${person}" method="post">
+           <div class="input-group">
+               <label for="name">Team Name:</label>
+               <input type="text" id="name" th:field="*{name}" placeholder="Enter team name" required/>
+           </div>
+           <div class="input-group">
+               <label for="email">E-mail:</label>
+               <input type="text" id="email" th:field="*{email}" placeholder="Enter a   email" required/>
+           </div>
+           <div class="input-group">
+               <label for="phone">Phone:</label>
+               <input type="text" id="phone" th:field="*{phone}" placeholder="Enter phone" required oninput="applyPhoneMask(event, phone)" maxlength="15"/>
+           </div>
+           <div class="input-group">
+               <label for="birth_date">BirthDate:</label>
+               <input type="date" id="birth_date" th:field="*{birth_date}" placeholder="Enter a birthDate" required/>
+           </div>
 
+           <div class="input-group">
+               <label for="cpf">Cpf:</label>
+               <input type="text" id="cpf" th:field="*{cpf}" placeholder="Enter CPF" required oninput="applyCpfMask(event)" maxlength="14"/>
+           </div>
+           <div class="select-group">
+               <label for="team_id">Choise Team:</label>
+               <select id="team_id" th:field="*{team}" required>
+                   <option value="">Select a team</option>
+                   <option th:each="team : ${teams}" th:value="${team.id}" th:text="${team.getName()}"></option>
+               </select>
+           </div>
+           <div class="input-group">
+               <button type="submit">Create Team</button>
+           </div>
+       </form>
 
-<form th:action="@{/persons}" th:object="${person}" method="post">
-    <div>
-        <label for="name">Team Name:</label>
-        <input type="text" id="name" th:field="*{name}" placeholder="Enter team name" required/>
-    </div>
-    <div>
-        <label for="email">email:</label>
-        <input type="text" id="email" th:field="*{email}" placeholder="Enter email" required/>
-    </div>
-    <div>
-        <label for="phone">phone:</label>
-        <input type="text" id="phone" th:field="*{phone}" placeholder="Enter phone" required/>
-    </div>
-    <div>
-        <label for="birth_date">birthDate:</label>
-        <input type="text" id="birth_date" th:field="*{birth_date}" placeholder="Enter birthDate" required/>
-    </div>
+       <a href="/teams">Back to Teams List</a>
+   </div>
+</section>
 
-    <div>
-        <label for="cpf">cpf:</label>
-        <input type="text" id="cpf" th:field="*{cpf}" placeholder="Enter cpf" required/>
-    </div>
-    <div>
-        <label for="team_id">team_id:</label>
-        <select id="team_id" th:field="*{team}" required>
-            <option value="">Select a team</option>
-            <option th:each="team : ${teams}" th:value="${team.id}" th:text="${team.getName()}"></option>
-        </select>
-    </div>
-    <div>
-        <button type="submit">Create Team</button>
-    </div>
-</form>
-<a href="/teams">Back to Teams List</a>
 </body>
 </html>
