--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,17 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<section class="login">
+<section class="register">
     <div class="container">
-        <form th:action="@{/login}" method="post">
+        <form th:action="@{/register}" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <button type="submit">Register</button>
         </form>
+        <div th:if="${error}" th:text="${error}"></div>
     </div>
 </section>
 </body>
