--- a/src/main/resources/templates/persons/index.html
+++ b/src/main/resources/templates/persons/index.html
@@ -32,7 +32,7 @@
        <h1>Create New Team</h1>
        <h1>Home</h1>
        <a href="/logout">Logout</a>
-       <form th:action="@{/persons}" th:object="${person}" method="post">
+       <form th:action="@{/create}" th:object="${person}" method="post">
            <div class="input-group">
                <label for="name">Team Name:</label>
                <input type="text" id="name" th:field="*{name}" placeholder="Enter team name" required/>
