--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-<section class="register">
+<section class="login">
+
     <div class="container">
+        <h2>Register</h2>
         <form th:action="@{/register}" method="post">
+
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Register</button>
