--- a/src/main/resources/templates/education_form.html
+++ b/src/main/resources/templates/education_form.html
@@ -3,24 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Education Form</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/education.css">
+
 </head>
 <body>
-<h1>Associate Education to Person</h1>
-<form th:action="@{/educations/associate/{personId}(personId=${personId})}" method="post">
-    <label for="courseName">Course Name:</label>
-    <input type="text" id="courseName" name="courseName" required>
+<section class="education-form">
+    <div class="container">
+        <h1>Associate Education to Person</h1>
+        <form th:action="@{/educations/associate/{personId}(personId=${personId})}" method="post">
+            <label for="courseName">Course Name:</label>
+            <input type="text" id="courseName" name="courseName" required placeholder="Enter course name">
+            <label for="courseLevel">Course Level:</label>
+           <select id="courseLevel" name="courseLevel" required>
+               <option value="">  select a level</option>
+               <option value="BACHELOR">high school</option>
+               <option value="MASTER">technical</option>
+               <option value="DOCTORATE">bachelor's degree</option>
+               <option value="DOCTORATE">specialization</option>
+               <option value="DOCTORATE">master's degree</option>
+          </select>
 
-    <label for="courseLevel">Course Level:</label>
-    <input type="text" id="courseLevel" name="courseLevel" required>
+            <label for="completionDate">Completion Date:</label>
+            <input type="date" id="completionDate" name="completionDate" required placeholder="Enter completion date">
 
-    <label for="completionDate">Completion Date:</label>
-    <input type="date" id="completionDate" name="completionDate" required>
+            <label for="institution">Institution:</label>
+            <input type="text" id="institution" name="institution" required placeholder="Enter institution">
 
-    <label for="institution">Institution:</label>
-    <input type="text" id="institution" name="institution" required>
-
-    <button type="submit">Associate Education</button>
-</form>
+            <button type="submit">Associate Education</button>
+        </form>
+    </div>
+</section>
 </body>
 </html>
