--- a/src/main/resources/static/scss/components/_card.scss
+++ b/src/main/resources/static/scss/components/_card.scss
@@ -1,14 +1,11 @@
 .card {
 
-
   &-name {
     font-size: 16px;
     font-weight: bold;
     color: #333;
   }
-
   a {
-      background-color: #fff;
       border: 1px solid #ddd;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -16,12 +13,19 @@
       width: fit-content;
       text-align: center;
       transition: all 0.3s ease;
-    &:hover {
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      background: #eee;
-    }
-
   }
 
+    &--yellow {
+      a {
+        background-color: #EFEC98;
+        border-color: #DBD765;
+        color: #721c24;
+
+        &:hover {
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          background: #E2DF86;
+        }
+      }
+    }
 }
 
