--- a/src/main/resources/templates/education_form.html
+++ b/src/main/resources/templates/education_form.html
@@ -9,10 +9,10 @@
         <form th:action="@{/educations/associate/{personId}(personId=${personId})}" method="post" class="form">
             <label for="courseName">Course Name:</label>
             <input type="text" id="courseName" name="courseName" required placeholder="Enter course name">
-            <label for="courseLevel">Education Level:</label>
-            <select id="courseLevel" th:field="*{educationLevels}" required>
+            <label for="course_level">Education Level:</label>
+            <select id="course_level" name="course_level" required>
                 <option value="">Selecione um nível</option>
-                <option th:each="educationLevel : ${educationLevels}" th:value="${educationLevel.name()}" th:text="${educationLevel.displayName}"></option>
+                <option th:each="level : ${educationLevels}" th:value="${level.name()}" th:text="${level.displayName}"></option>
             </select>
 
             <label for="completionDate">Completion Date:</label>
