--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -9,11 +9,18 @@
         <p>Here you can create teams and add members to them.</p>
         <p>Click on the links below to navigate through the application:</p>
         <ul class="home__content">
-            <li>
-                <a href="/teams/create">add a new team</a>
+            <li class="card card--yellow">
+                <a class="" href="/teams/create">add a new team</a>
             </li>
-            <li><a href="/persons/create"> add a new person</a></li>
-            <li><a href="/teams/list">view all teams</a></li>
+            <li class="card card--yellow">
+                <a href="/persons/create"> add a new person</a>
+            </li>
+            <li class="card card--yellow">
+                <a  href="/teams/list">view all teams</a>
+            </li>
+            <li class="card card--yellow">
+                <a  href="/persons/list">view all Persons</a>
+            </li>
         </ul>
     </div>
 </section>
