--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -33,7 +33,6 @@ a:hover {
 }
 
 .button {
-  margin-top: 15px;
   padding: 10px 20px;
   font-size: 16px;
   color: #fff;
@@ -51,6 +50,9 @@ a:hover {
 }
 .button--secondary:hover {
   background-color: #3d3d3d;
+}
+.button--danger {
+  background-color: #dc3545;
 }
 
 .form {
@@ -132,7 +134,6 @@ a:hover {
   color: #333;
 }
 .card a {
-  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -141,9 +142,14 @@ a:hover {
   text-align: center;
   transition: all 0.3s ease;
 }
-.card a:hover {
+.card--yellow a {
+  background-color: #EFEC98;
+  border-color: #DBD765;
+  color: #721c24;
+}
+.card--yellow a:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background: #eee;
+  background: #E2DF86;
 }
 
 table {
@@ -174,6 +180,10 @@ tr:nth-child(even) {
   padding: 20px;
   background-color: #f9f9f9;
   height: 100%;
+}
+.home__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .home p {
@@ -327,14 +337,27 @@ tr:nth-child(even) {
 }
 
 .person {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.person__list {
+  padding-top: 50px;
+}
+.person__item {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  height: 100vh;
-  background-color: #f0f0f0;
-  margin: 0;
-  width: 100%;
-  padding: 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f0f0f0;
+}
+.person__item div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .teams {
