--- a/src/main/resources/static/scss/pages/_home.scss
+++ b/src/main/resources/static/scss/pages/_home.scss
@@ -5,6 +5,12 @@
   background-color: #f9f9f9;
   height: 100%;
 
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+  }
+
 }
 
 .home p {
