--- a/src/main/resources/templates/teams/list.html
+++ b/src/main/resources/templates/teams/list.html
@@ -5,33 +5,21 @@
 <div th:replace="~{layout/header :: header}"></div>
 <section th:fragment="content">
     <div class="container">
-        <h1>Members:</h1>
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Departament</th>
-                <th>Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="team : ${teams}">
-                <td>
-                    <a th:href="@{'/teams/mural/' + ${team.getId()}}"><span th:text="${team.getName()}"></span></a>
-                </td>
-                <td>
-                   <span th:text="${team.getDepartment()}"></span>
-                </td>
-                <td>
-                    <a th:href="@{'/teams/edit/' + ${team.getId()}}">Edit</a> |
+        <h1 class="title">Welcome to the Team List</h1>
+        <ul class="person__list">
+            <li th:each="team : ${teams}" class="person__item">
+                <p th:text="'Name: ' + ${team.getName()}"></p>
+                <p th:text="'Departament: ' + ${team.getDepartment()}"></p>
+                <div>
+                    <a th:href="@{'/teams/mural/' + ${team.id}}" class="button button--primary">ver</a>
+                    <a th:href="@{'/persons/details/' + ${team.id}}" class="button button--secondary">editar</a>
                     <form th:action="@{'/teams/delete/' + ${team.id}}" method="post" onsubmit="return confirm('Are you sure you want to delete this team?');">
-                        <input type="hidden" name="_method" value="delete"/>
-                        <button type="submit">Delete</button>
+                        <input type="hidden" name="_method" value="delete" />
+                        <button type="submit" class="button button--danger">Delete</button>
                     </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
 </body>
