--- a/src/main/resources/templates/persons/list.html
+++ b/src/main/resources/templates/persons/list.html
@@ -12,7 +12,7 @@
                 <p th:text="'Name: ' + ${person.getName()}"></p>
                 <div>
                     <a th:href="@{'/persons/details/' + ${person.id}}" class="button button--primary">ver</a>
-                    <a th:href="@{'/persons/details/' + ${person.id}}" class="button button--secondary">editar</a>
+                    <a th:href="@{'/persons/edit/' + ${person.id}}" class="button button--secondary">editar</a>
                     <form th:action="@{'/persons/delete/' + ${person.id}}" method="post" onsubmit="return confirm('Are you sure you want to delete this team?');">
                         <input type="hidden" name="_method" value="delete" />
                         <button type="submit" class="button button--danger">Delete</button>
