--- a/src/main/resources/templates/persons/edit.html
+++ b/src/main/resources/templates/persons/edit.html
@@ -5,8 +5,8 @@
 <div th:replace="~{layout/header :: header}"></div>
 <section th:fragment="content" class="home">
     <div class="container">
-       <h1 class="title">Create New Team</h1>
-        <form th:action="@{'/persons/update/' + ${person.getId()}}" th:object="${person}" method="post" class="form">
+       <h1 class="title">Create New Person</h1>
+        <form th:action="@{'/persons/update/' + ${person.id}}" th:object="${person}" method="post" class="form">
             <input type="hidden" th:field="*{id}"/>
 
             <div th:if="${errorMessage}" th:text="${errorMessage}" style="color: red;"></div>
@@ -15,13 +15,13 @@
             <input type="text" id="name" th:field="*{name}" required/><br/>
 
             <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" th:field="*{cpf}" required/><br/>
+            <input type="text" id="cpf" th:field="*{cpf}" placeholder="Enter CPF" required oninput="applyCpfMask(event)" maxlength="14"/>
 
             <label for="birthDate">Birth Date:</label>
             <input type="date" id="birthDate" th:field="*{birth_date}" required/><br/>
 
             <label for="phone">Phone:</label>
-            <input type="text" id="phone" th:field="*{phone}" required/><br/>
+            <input type="text" id="phone" th:field="*{phone}" placeholder="Enter phone" required oninput="applyPhoneMask(event, phone)" maxlength="15"/>
 
             <label for="email">Email:</label>
             <input type="email" id="email" th:field="*{email}" required/><br/>
@@ -32,17 +32,15 @@
                 <option th:each="team : ${teams}" th:value="${team.id}" th:text="${team.name}"></option>
             </select><br/>
 
-
-
-
-            <button type="submit">Update</button>
+            <button type="submit" class="button button--primary">Update</button>
         </form>
 
-        <div>
-            <h2>Education</h2>
+
+        <div class="teams__content">
+            <h2 class="title">Education</h2>
             <div th:if="${educations != null}">
-                <div th:each="education : ${educations}">
-                    <select name="educationLevelNames" required>
+                <div th:each="education : ${educations}" class="teams__footer">
+                    <select name="educationLevelNames" required class="teams__footer-full">
                         <option th:value="${education}" th:text="${educations.getCourseName()}" selected></option>
                     </select>
                     <form class="form" th:action="@{'/persons/removeEducation/' + ${educations.getId()}}" method="post" onsubmit="return confirm('Are you sure you want to delete this team?');">
@@ -52,7 +50,7 @@
 
                 </div>
             </div>
-            <a th:href="@{/educations/form/{personId}(personId=${person.getId()})}" class="button button--secondary">add Education</a>
+            <a th:href="@{/educations/form/{personId}(personId=${person.getId()})}" class="button button--secondary">Add Education</a>
         </div>
 
    </div>
