--- a/src/main/resources/static/scss/pages/_teams.scss
+++ b/src/main/resources/static/scss/pages/_teams.scss
@@ -7,6 +7,22 @@
         grid-template-columns: repeat(2, 320px);
       gap: 20px;
     }
+
+  &__footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap:10px;
+    &-full {
+        width: 100%;
+
+    }
+
+  }
+  &__content {
+    margin-top: 30px;
+  }
+
 }
 
 .random-fact {
