--- a/src/main/resources/templates/teams/list.html
+++ b/src/main/resources/templates/teams/list.html
@@ -12,7 +12,7 @@
                 <p th:text="'Departament: ' + ${team.getDepartment()}"></p>
                 <div>
                     <a th:href="@{'/teams/mural/' + ${team.id}}" class="button button--primary">ver</a>
-                    <a th:href="@{'/persons/details/' + ${team.id}}" class="button button--secondary">editar</a>
+                    <a th:href="@{'/teams/edit/' + ${team.id}}" class="button button--secondary">editar</a>
                     <form th:action="@{'/teams/delete/' + ${team.id}}" method="post" onsubmit="return confirm('Are you sure you want to delete this team?');">
                         <input type="hidden" name="_method" value="delete" />
                         <button type="submit" class="button button--danger">Delete</button>
