--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,11 +1,10 @@
 <header th:fragment="header">
     <div class="header-container">
-        <h3>Site Header</h3>
+        <h3>Manager Teams</h3>
         <nav>
             <ul>
                 <li><a th:href="@{/home}">Home</a></li>
-                <li><a th:href="@{/about}">About</a></li>
-                <li><a th:href="@{/contact}">Contact</a></li>
+
             </ul>
         </nav>
     </div>
