--- a/src/main/resources/templates/teams/create.html
+++ b/src/main/resources/templates/teams/create.html
@@ -10,9 +10,9 @@
             <label for="name">Team Name:</label>
             <input type="text" id="name" th:field="*{name}" placeholder="Enter team name" required/>
             <label for="department">Departament:</label>
-            <input type="text" id="department" th:field="*{department}" placeholder="Enter team name" required/>
+            <input type="text" id="department" th:field="*{department}" placeholder="Enter Departament name" required/>
             <button  class="button button--primary" type="submit">Create Team</button>
-            <a class="button button--secondary" href="/teams/list">Back to Teams List</a>
+            <a class="button button--secondary mt-10" href="/teams/list">Back to Teams List</a>
     </form>
 </div>
 </section>
