fix: adjuste login style

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -404,10 +404,9 @@ tr:nth-child(even) {
 }
 
 .login form {
-  background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background: transparent;
   width: 300px;
   max-width: 100%;
 }
