--- a/src/main/resources/static/scss/pages/_login.scss
+++ b/src/main/resources/static/scss/pages/_login.scss
@@ -6,10 +6,9 @@
   height: 100vh;
 }
 .login form {
-  background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background: transparent;
   width: 300px;
   max-width: 100%;
 }
