--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -4,7 +4,9 @@
         <nav>
             <ul>
                 <li><a th:href="@{/home}">Home</a></li>
-
+                <li>
+                    <a th:href="@{/logout}" >Logout</a>
+                </li>
             </ul>
         </nav>
     </div>
