--- a/src/main/resources/templates/persons/index.html
+++ b/src/main/resources/templates/persons/index.html
@@ -29,7 +29,7 @@
                <option th:each="team : ${teams}" th:value="${team.id}" th:text="${team.getName()}"></option>
            </select>
            <button class="button button--primary" type="submit">Create Team</button>
-            <a class="button button--secondary mt-10" href="/teams">Back to Teams List</a>
+            <a class="button button--secondary mt-10" href="/persons/list">Back to Person List</a>
        </form>
 
 
