--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -402,6 +402,11 @@ tr:nth-child(even) {
   align-items: center;
   height: 100vh;
 }
+.login .error {
+  color: red;
+  text-align: center;
+  margin-top: 20px;
+}
 
 .login form {
   padding: 20px;
