--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,10 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
+
+            <div th:if="${param.error}" class="error">
+                Invalid username or password.
+            </div>
         </form>
     </div>
 </section>
